--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,8 @@
 	dbase="mariadb" works now
 	docs have been updated to acknowledge mariadb
 	added configure test to disable ODBC on platforms without SQLULEN
+	updated mysql_config test to add -L/usr/local/lib if it fails, to deal
+		with libiconv, which is located there, on newer freebsd
 
 1.3.0 - updated systemd init file to use SIGINT to kill sqlrelay
 	fixed several "ocurred" -> "occurred" typo's
