--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,7 @@
 	updated mysql_config test to add -L/usr/local/lib if it fails, to deal
 		with libiconv, which is located there, on newer freebsd
 	updated mysql drop-in test not to test def_length if def is NULL
+	added NODEGYPPYTHON flag that can be set manually on netbsd
 
 1.3.0 - updated systemd init file to use SIGINT to kill sqlrelay
 	fixed several "ocurred" -> "occurred" typo's
