--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,7 @@
 		with libiconv, which is located there, on newer freebsd
 	updated mysql drop-in test not to test def_length if def is NULL
 	added NODEGYPPYTHON flag that can be set manually on netbsd
+	fixed gcj/gcj3/kaffe detection on older systems
 
 1.3.0 - updated systemd init file to use SIGINT to kill sqlrelay
 	fixed several "ocurred" -> "occurred" typo's
