--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,8 @@
 	added NODEGYPPYTHON flag that can be set manually on netbsd
 	fixed gcj/gcj3/kaffe detection on older systems
 	fixed some buggy static module declarations/assignments
+	sqlr-import can import csv files now
+	sqlr-export correctly escapes double-quotes now
 
 1.3.0 - updated systemd init file to use SIGINT to kill sqlrelay
 	fixed several "ocurred" -> "occurred" typo's
