--- a/ChangeLog
+++ b/ChangeLog
@@ -19,6 +19,7 @@
 	fixed some buggy static module declarations/assignments
 	sqlr-import can import csv files now
 	sqlr-export correctly escapes double-quotes now
+	query translations apply to the select-database query now
 
 1.3.0 - updated systemd init file to use SIGINT to kill sqlrelay
 	fixed several "ocurred" -> "occurred" typo's
