added a per-cursor bindpool

--- a/ChangeLog
+++ b/ChangeLog
@@ -21,6 +21,7 @@
 	sqlr-export correctly escapes double-quotes now
 	query translations apply to the select-database query now
 	added api=stmt/classic option to mysql connection module
+	added a per-cursor bindpool
 
 1.3.0 - updated systemd init file to use SIGINT to kill sqlrelay
 	fixed several "ocurred" -> "occurred" typo's
