--- a/ChangeLog
+++ b/ChangeLog
@@ -22,6 +22,7 @@
 	query translations apply to the select-database query now
 	added api=stmt/classic option to mysql connection module
 	added a per-cursor bindpool
+	added unicode=yes/no opiton to odbc connection module
 
 1.3.0 - updated systemd init file to use SIGINT to kill sqlrelay
 	fixed several "ocurred" -> "occurred" typo's
