--- a/ChangeLog
+++ b/ChangeLog
@@ -25,6 +25,7 @@
 	added unicode=yes/no opiton to odbc connection module
 	fixed a bug that could cause stale column metadata to a protocol
 		module between prepare and execute when binds are being faked
+	added stalecursors logger
 
 1.3.0 - updated systemd init file to use SIGINT to kill sqlrelay
 	fixed several "ocurred" -> "occurred" typo's
