--- a/ChangeLog
+++ b/ChangeLog
@@ -26,6 +26,7 @@
 	fixed a bug that could cause stale column metadata to a protocol
 		module between prepare and execute when binds are being faked
 	added stalecursors logger
+	added send()/recv() passthrough operations
 
 1.3.0 - updated systemd init file to use SIGINT to kill sqlrelay
 	fixed several "ocurred" -> "occurred" typo's
