--- a/ChangeLog
+++ b/ChangeLog
@@ -27,6 +27,8 @@
 		module between prepare and execute when binds are being faked
 	added stalecursors logger
 	added send()/recv() passthrough operations
+	made various bind-related buffers per-cursor
+	added pattern option to query notification event
 
 1.3.0 - updated systemd init file to use SIGINT to kill sqlrelay
 	fixed several "ocurred" -> "occurred" typo's
