--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 1.4.1 - spec file tweaks
 	odbc uses different begin tx queries for different db's now
 	made skipWhitespaceAndComments NULL-safe
+	disabled call to mysql_stmt_reset() to improve api=stmt performance
 
 1.4.0 - odbc connection module - trace=yes/no/default now instead of just yes/no
 	pushed detachbeforelogin parameter up to sqlrserverconnection class
