--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 	odbc uses different begin tx queries for different db's now
 	made skipWhitespaceAndComments NULL-safe
 	disabled call to mysql_stmt_reset() to improve api=stmt performance
+	added bulk load framework
 
 1.4.0 - odbc connection module - trace=yes/no/default now instead of just yes/no
 	pushed detachbeforelogin parameter up to sqlrserverconnection class
