--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 	made skipWhitespaceAndComments NULL-safe
 	disabled call to mysql_stmt_reset() to improve api=stmt performance
 	added bulk load framework
+	added bind variable translation framework
 
 1.4.0 - odbc connection module - trace=yes/no/default now instead of just yes/no
 	pushed detachbeforelogin parameter up to sqlrserverconnection class
