--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 	disabled call to mysql_stmt_reset() to improve api=stmt performance
 	added bulk load framework
 	added bind variable translation framework
+	fixed countBindVariables to ignore @@'s
 
 1.4.0 - odbc connection module - trace=yes/no/default now instead of just yes/no
 	pushed detachbeforelogin parameter up to sqlrserverconnection class
