--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
 	added bind variable translation framework
 	fixed countBindVariables to ignore @@'s
 	odbc passes length to unicode-conversion routine now, when it can
+	improved conversion of string bind variables to unicode in odbc
 
 1.4.0 - odbc connection module - trace=yes/no/default now instead of just yes/no
 	pushed detachbeforelogin parameter up to sqlrserverconnection class
