--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@
 	fixed countBindVariables to ignore @@'s
 	odbc passes length to unicode-conversion routine now, when it can
 	improved conversion of string bind variables to unicode in odbc
+	odbc gets column info after prepare (before execute) in call cases now
 
 1.4.0 - odbc connection module - trace=yes/no/default now instead of just yes/no
 	pushed detachbeforelogin parameter up to sqlrserverconnection class
