updated perl dbi driver to allow leading bind delimiters

--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,7 @@
 	added error handling to translation frameworks
 	readded conditional mysql_stmt_reset call to recover from
 		"Commands out of sync" errors
+	perl dbi driver allows leading delimiters in bind variable names now
 
 1.4.0 - odbc connection module - trace=yes/no/default now instead of just yes/no
 	pushed detachbeforelogin parameter up to sqlrserverconnection class
