Moved various copyXXX() and debugXXX() methods up to sqlrprotocol.

--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,7 @@
 	fixed bind_inout_param -> bind_param_inout in perldbi docs
 	added moduledata framework
 	added sha1 and sha256 auth modules
+	moved some common protocol module methods into sqlrprotocol
 
 1.4.0 - odbc connection module - trace=yes/no/default now instead of just yes/no
 	pushed detachbeforelogin parameter up to sqlrserverconnection class
