nodejs tweaks for node 11

--- a/ChangeLog
+++ b/ChangeLog
@@ -16,6 +16,7 @@
 	added moduledata framework
 	added sha1 and sha256 auth modules
 	moved some common protocol module methods into sqlrprotocol
+	tweaked nodejs api to support node 11
 
 1.4.0 - odbc connection module - trace=yes/no/default now instead of just yes/no
 	pushed detachbeforelogin parameter up to sqlrserverconnection class
