--- a/ChangeLog
+++ b/ChangeLog
@@ -18,6 +18,7 @@
 	moved some common protocol module methods into sqlrprotocol
 	tweaked nodejs api to support node 11
 	refactored bind variable translation a bit
+	consolidated bindVariablePrefix and bindFormat
 
 1.4.0 - odbc connection module - trace=yes/no/default now instead of just yes/no
 	pushed detachbeforelogin parameter up to sqlrserverconnection class
