--- a/ChangeLog
+++ b/ChangeLog
@@ -20,6 +20,7 @@
 	refactored bind variable translation a bit
 	consolidated bindVariablePrefix and bindFormat
 	fetching a row can return an error now
+	included mysql protocol module and auth modules
 
 1.4.0 - odbc connection module - trace=yes/no/default now instead of just yes/no
 	pushed detachbeforelogin parameter up to sqlrserverconnection class
