added per-tx/session memory pool migrated sqlrtranslatins pool to per-session pool
added deadlock replay skeleton

--- a/ChangeLog
+++ b/ChangeLog
@@ -21,6 +21,8 @@
 	consolidated bindVariablePrefix and bindFormat
 	fetching a row can return an error now
 	included mysql protocol module and auth modules
+	added per-tx/session memory pools, migrated sqlrtranslations memory
+		pool to per-session pool
 
 1.4.0 - odbc connection module - trace=yes/no/default now instead of just yes/no
 	pushed detachbeforelogin parameter up to sqlrserverconnection class
