got deadlock replay to work with binds added triggers to uninstall/clean targets

--- a/ChangeLog
+++ b/ChangeLog
@@ -25,6 +25,7 @@
 		pool to per-session pool
 	added controller endTransaction() method
 	added endTransaction/endSession methods to all modules
+	added a deadlock_replay trigger
 
 1.4.0 - odbc connection module - trace=yes/no/default now instead of just yes/no
 	pushed detachbeforelogin parameter up to sqlrserverconnection class
