--- a/ChangeLog
+++ b/ChangeLog
@@ -26,7 +26,7 @@
 	added controller endTransaction() method
 	added endTransaction/endSession methods to all modules
 	added a deadlock_replay trigger
-	fixed systemd enable bug
+	fixed systemctl enable bug
 
 1.4.0 - odbc connection module - trace=yes/no/default now instead of just yes/no
 	pushed detachbeforelogin parameter up to sqlrserverconnection class
