--- a/ChangeLog
+++ b/ChangeLog
@@ -27,6 +27,8 @@
 	added endTransaction/endSession methods to all modules
 	added a deadlock_replay trigger
 	fixed systemctl enable bug
+	made mapping of 0-scale decimals to longlong's in mysql protocol
+		optional, and disabled by default
 
 1.4.0 - odbc connection module - trace=yes/no/default now instead of just yes/no
 	pushed detachbeforelogin parameter up to sqlrserverconnection class
