--- a/ChangeLog
+++ b/ChangeLog
@@ -29,6 +29,8 @@
 	fixed systemctl enable bug
 	made mapping of 0-scale decimals to longlong's in mysql protocol
 		optional, and disabled by default
+	all tx-queries are intercepted now
+	fixed mysql varchar type mapping (from char to varstring)
 
 1.4.0 - odbc connection module - trace=yes/no/default now instead of just yes/no
 	pushed detachbeforelogin parameter up to sqlrserverconnection class
