--- a/ChangeLog
+++ b/ChangeLog
@@ -29,8 +29,10 @@
 	fixed systemctl enable bug
 	made mapping of 0-scale decimals to longlong's in mysql protocol
 		optional, and disabled by default
-	all tx-queries are intercepted now
+	all tx-queries are intercepted now (including autocommit on/off)
 	fixed mysql varchar type mapping (from char to varstring)
+	mysql front-end sets in-tx/autocommit status flags now
+	bytestring::copy() used now when copying queries between buffers
 
 1.4.0 - odbc connection module - trace=yes/no/default now instead of just yes/no
 	pushed detachbeforelogin parameter up to sqlrserverconnection class
