--- a/ChangeLog
+++ b/ChangeLog
@@ -35,6 +35,7 @@
 	bytestring::copy() used now when copying queries between buffers
 	fixed some subtle bind-realated mysql protocol bugs
 	mysql connection quotes database name when selecting the db now
+	added fetch-timings
 
 1.4.0 - odbc connection module - trace=yes/no/default now instead of just yes/no
 	pushed detachbeforelogin parameter up to sqlrserverconnection class
