--- a/ChangeLog
+++ b/ChangeLog
@@ -36,6 +36,7 @@
 	fixed some subtle bind-realated mysql protocol bugs
 	mysql connection quotes database name when selecting the db now
 	added fetch-timings
+	-Wno-error=date-time is used if supported
 
 1.4.0 - odbc connection module - trace=yes/no/default now instead of just yes/no
 	pushed detachbeforelogin parameter up to sqlrserverconnection class
