--- a/ChangeLog
+++ b/ChangeLog
@@ -38,6 +38,7 @@
 	added fetch-timings
 	-Wno-error=date-time is used if supported
 	fixed firebird int64 datatype decimal problem
+	fixed firebird blob error
 
 1.4.0 - odbc connection module - trace=yes/no/default now instead of just yes/no
 	pushed detachbeforelogin parameter up to sqlrserverconnection class
