--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+1.6.0 - added begin, commit, rollback events
+
 1.5.0 - spec file tweaks
 	odbc uses different begin tx queries for different db's now
 	made skipWhitespaceAndComments NULL-safe
