--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@
 	added bindvariabledelimiters config option to define supported bind
 		variable delimiters
 	added fakeinputbindvariablesunicodestrings config option
+	added bind variable delimiters config methods to c++ api
 
 1.5.0 - spec file tweaks
 	odbc uses different begin tx queries for different db's now
