translation module framework supports binary queries now normalize module supports binary queries now

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,7 @@
 	added fakeinputbindvariablesunicodestrings config option
 	added bind variable delimiters config methods to c++ api
 	replay trigger updates
+	updated normalize translation to support queries containing binary data
 
 1.5.0 - spec file tweaks
 	odbc uses different begin tx queries for different db's now
