refactored sqlrcursor's private methods a bit added mysql binary data test

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,7 @@
 	added bind variable delimiters config methods to c++ api
 	replay trigger updates
 	updated normalize translation to support queries containing binary data
+	refactored some sqlrclient api private methods
 
 1.5.0 - spec file tweaks
 	odbc uses different begin tx queries for different db's now
