--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,7 @@
 	added bind variable delimiters config methods to c++ api
 	replay trigger updates
 	updated normalize translation to support queries containing binary data
+	fixed a backslash-escape bug in the normalize translation
 	refactored some sqlrclient api private methods
 
 1.5.0 - spec file tweaks
