--- a/ChangeLog
+++ b/ChangeLog
@@ -12,6 +12,7 @@
 	updated normalize translation to support queries containing binary data
 	fixed a backslash-escape bug in the normalize translation
 	refactored some sqlrclient api private methods
+	refactored various bind-manipulation/detection methods
 
 1.5.0 - spec file tweaks
 	odbc uses different begin tx queries for different db's now
