--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,8 @@
 	refactored various bind-manipulation/detection methods
 	sqlr-listener creates tmpdir now on start, if it doesn't exist
 		(because this is often in /run, which is often a tmpfs)
+	postgresql connection module forces re-fetch of column data after
+		execute now
 
 1.5.0 - spec file tweaks
 	odbc uses different begin tx queries for different db's now
