--- a/ChangeLog
+++ b/ChangeLog
@@ -26,6 +26,8 @@
 	fixed subtle sqlserver max-varchar bind length bug
 	fixed various subtle sqlserver bugs where column-info isn't valid until
 		after execute
+	odbc connection module sets column precision = column length if
+		column precision = -1
 
 1.5.0 - spec file tweaks
 	odbc uses different begin tx queries for different db's now
