--- a/ChangeLog
+++ b/ChangeLog
@@ -30,6 +30,8 @@
 		column precision = -1
 	when using odbc on front and back end, the object type works in
 		SQLTables now
+	result set translations work with "show databases/tables/etc." queries
+		with an ODBC backend now
 
 1.5.0 - spec file tweaks
 	odbc uses different begin tx queries for different db's now
